--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,3 +2,42 @@ body {
   font-family: Helvetica;
   text-align: center;
 }
+
+#header {
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+  color: white;
+}
+
+nav {
+  font-size: 18px;
+  text-decoration: underline;
+}
+
+h1 {
+  font-weight: bold;
+  font-size: 70px;
+}
+
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h4 {
+  font-size:23px;
+  font-weight: bold;
+  color: white;
+  background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+}
+
+span {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+#footer {
+ background-color: dimgray;
+ text-align: left;
+ color: white;
+ font-size: 11px;
+}
